# d

./: CMakeLists.txt  main.cpp  plot.plt  testOMP.plt
gnuplot/: plot.plt  testOMP.plt
maple/: shuttle_3.mw  shuttle_5.mw
paper/: CMakeLists.txt  abstract.txt  abstract_eng.txt  abstract_rus.txt  example-en.tex  main.tex  pavt-en.sty  title.txt  title_eng.txt  title_rus.txt
scratch/: equation.tex  main.tex  numeric_scheme.tex  thomas.tex
src/: P3D_thomas.cpp  P3D_thomas.hpp  main.cpp
test/: CMakeLists.txt  main.cpp
